# mo

./: .gitignore  ChebyKAN Open.py  IMORBMO.py  README.md  data3.7.xlsx  data_set.py  pyproject.toml
.github/workflows/: python-app.yml
utils/: func.py  plots.py
